--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -10,7 +10,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push-image:
+  docker:
     runs-on: ubuntu-latest
 
     strategy:
