--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -13,15 +13,6 @@ jobs:
   docker:
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - dockerfile: ./server-1/Dockerfile
-            image: ${{ $REGISTRY }}/${{ $IMAGE_NAME }}-server-1
-          - dockerfile: ./server-2/Dockerfile
-            image: ${{ $REGISTRY }}/${{ $IMAGE_NAME }}-server-2
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -29,7 +20,7 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          registry: ${{ $REGISTRY }}
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           
@@ -37,7 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ matrix.image }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-server-1
       
       - name: install modules
         run: npm i
@@ -46,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ${{ matrix.dockerfile }}
+          file: ./server-2/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
