--- a/server-1/Dockerfile
+++ b/server-1/Dockerfile
@@ -3,7 +3,6 @@ FROM node:18
 WORKDIR /usr/src/app
 
 COPY package.json ./
-COPY yarn.lock ./
-RUN yarn install
+RUN npm install
 
-CMD [ "yarn", "start" ]
+CMD [ "npm", "start" ]
