--- a/server-1/Dockerfile
+++ b/server-1/Dockerfile
@@ -1,9 +1,19 @@
 FROM node:18
 
+# Create app directory
 WORKDIR /usr/src/app
 
-COPY package.json ./
-COPY index.js ./
-RUN npm install
+# Install app dependencies
+# A wildcard is used to ensure both package.json AND package-lock.json are copied
+# where available (npm@5+)
+COPY package*.json ./
 
-CMD [ "npm", "start" ]
+RUN npm install
+# If you are building your code for production
+# RUN npm ci --only=production
+
+# Bundle app source
+COPY . .
+
+EXPOSE 3000
+CMD [ "node", "index.js" ]
