--- a/server-1/package.json
+++ b/server-1/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@fastify/env": "^4.2.0",
     "axios": "^1.2.0",
     "ethers": "^5.7.2",
     "fastify": "^4.10.2"
